@@ -51,15 +51,15 @@ public class BoundedPriorityQueueTest {
 		assertEquals(null, queue.offerItem(2));
 		assertEquals(null, queue.offerItem(3));
 		assertEquals(null, queue.offerItem(4));
-		assertEquals(new Integer(5), queue.offerItem(5));
+		assertEquals(Integer.valueOf(5), queue.offerItem(5));
 
-		assertEquals(new Integer(0), queue.peek());
-		assertEquals(new Integer(4), queue.peekTail());
+		assertEquals(Integer.valueOf(0), queue.peek());
+		assertEquals(Integer.valueOf(4), queue.peekTail());
 
-		assertEquals(new Integer(4), queue.offerItem(-1));
+		assertEquals(Integer.valueOf(4), queue.offerItem(-1));
 
-		assertEquals(new Integer(-1), queue.peek());
-		assertEquals(new Integer(3), queue.peekTail());
+		assertEquals(Integer.valueOf(-1), queue.peek());
+		assertEquals(Integer.valueOf(3), queue.peekTail());
 	}
 
 	/**
@@ -73,14 +73,14 @@ public class BoundedPriorityQueueTest {
 		assertEquals(null, queue.offerItem(0));
 		assertEquals(null, queue.offerItem(4));
 		assertEquals(null, queue.offerItem(2));
-		assertEquals(new Integer(5), queue.offerItem(5));
+		assertEquals(Integer.valueOf(5), queue.offerItem(5));
 
-		assertEquals(new Integer(0), queue.peek());
-		assertEquals(new Integer(4), queue.peekTail());
+		assertEquals(Integer.valueOf(0), queue.peek());
+		assertEquals(Integer.valueOf(4), queue.peekTail());
 
-		assertEquals(new Integer(4), queue.offerItem(-1));
+		assertEquals(Integer.valueOf(4), queue.offerItem(-1));
 
-		assertEquals(new Integer(-1), queue.peek());
-		assertEquals(new Integer(3), queue.peekTail());
+		assertEquals(Integer.valueOf(-1), queue.peek());
+		assertEquals(Integer.valueOf(3), queue.peekTail());
 	}
 }
